--- a/source/stylesheets/components/_team.scss
+++ b/source/stylesheets/components/_team.scss
@@ -2,5 +2,5 @@
 @import "alert";
 @import "navbar";
 @import "footer";
-@import "banner";
-@import "cards";
+// @import "banner";
+// @import "cards";
