--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
+  <a href="/middleman-site" class="navbar-wagon-brand">
     <img src="images/logo.png" alt="logo">
   </a>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-    <a href="/about" class="navbar-wagon-item navbar-wagon-link">About</a>
-    <a href="/team" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "About", "/middleman-site/about", class: "navbar-wagon-item navbar-wagon-link"%>
+    <%= link_to "Team", "/middleman-site/team", class: "navbar-wagon-item navbar-wagon-link"%>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
@@ -27,8 +27,12 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="/about">About</a></li>
-        <li><a href="/team">Team</a></li>
+        <li>
+          <%= link_to "About", "/middleman-site/about" %>
+        </li>
+        <li>
+          <%= link_to "Team", "/middleman-site/team" %>
+        </li>
       </ul>
     </div>
   </div>
